Minior changes to the block model

--- a/block_models/streaming/exporter.yaml
+++ b/block_models/streaming/exporter.yaml
@@ -1,4 +1,4 @@
-connector_type: postgres
+connector_type: postgres # this does not need to be changed
 database: database
 host: host
 password: password
