--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 API_KEY=zkWlN0PkIKSN0C11CfUHUj84OT5XOJ6tDZ6bDRO2
 EMAIL=admin@admin.com
 PASSWORD=admin
-BASE_URL=https://mage-ai.sedimark.work
+BASE_URL=https://mage.sedimark.work
